<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/preferences_general_title"
        app:iconSpaceReserved="false">

        <CheckBoxPreference
            android:key="key_auto_focus"
            android:title="@string/preferences_auto_focus"
            android:defaultValue="true"
            app:iconSpaceReserved="false"
            app:allowDividerBelow="true"
            app:allowDividerAbove="true"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/preferences_code_find_title"
        app:iconSpaceReserved="false">

    <CheckBoxPreference
        android:key="key_clipboard"
        android:title="@string/preferences_clipboard"
        android:defaultValue="false"
        app:iconSpaceReserved="false"
        app:allowDividerBelow="true"
        app:allowDividerAbove="true"/>

    <CheckBoxPreference
        android:key="key_beep"
        android:title="@string/preferences_beep"
        android:defaultValue="true"
        app:iconSpaceReserved="false"
        app:allowDividerBelow="true"
        app:allowDividerAbove="true"/>

    </PreferenceCategory>

</PreferenceScreen>