<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScanResultActivity">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="72dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/code_result_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/scan_result_text_view"
                        style="@style/TextAppearance.MaterialComponents.Subtitle1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Code: " />

                    <ImageView
                        android:id="@+id/scan_result_image_view"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="16dp"
                        android:scaleType="centerCrop" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/format" />

                        <TextView
                            android:id="@+id/result_format_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:text="QR" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/type" />

                        <TextView
                            android:id="@+id/result_type_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:layout_marginBottom="4dp"
                            android:text="Text" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

    </ScrollView>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/product_search_button"
            android:layout_width="0dp"
            android:layout_height="56dp"
            style="@style/AppTheme.Buttons"
            android:text="@string/product_search_button"
            android:layout_weight="1"
            android:visibility="gone" />

        <Button
            android:id="@+id/open_browser_button"
            android:layout_width="0dp"
            android:layout_height="56dp"
            style="@style/AppTheme.Buttons"
            android:text="@string/open_browser_button"
            android:layout_weight="1"
            android:visibility="gone" />

        <Button
            android:id="@+id/send_sms_button"
            android:layout_width="0dp"
            android:layout_height="56dp"
            style="@style/AppTheme.Buttons"
            android:text="@string/send_sms_button"
            android:layout_weight="1"
            android:visibility="gone" />

        <Button
            android:id="@+id/search_button"
            android:layout_width="0dp"
            android:layout_height="56dp"
            style="@style/AppTheme.Buttons"
            android:text="@string/search_button"
            android:layout_weight="1"
            android:visibility="gone" />

        <Button
            android:id="@+id/dial_button"
            android:layout_width="0dp"
            android:layout_height="56dp"
            style="@style/AppTheme.Buttons"
            android:text="@string/dial_button"
            android:layout_weight="1"
            android:visibility="gone" />

        <Button
            android:id="@+id/send_email_button"
            android:layout_width="0dp"
            android:layout_height="56dp"
            style="@style/AppTheme.Buttons"
            android:text="@string/send_email_button"
            android:layout_weight="1"
            android:visibility="gone" />

        <Button
            android:id="@+id/add_contact_button"
            android:layout_width="0dp"
            android:layout_height="56dp"
            style="@style/AppTheme.Buttons"
            android:text="@string/add_contact_button"
            android:layout_weight="1"
            android:visibility="gone" />

        <Button
            android:id="@+id/add_event_button"
            android:layout_width="0dp"
            android:layout_height="56dp"
            style="@style/AppTheme.Buttons"
            android:text="@string/add_event_button"
            android:layout_weight="1"
            android:visibility="gone" />

        <Button
            android:id="@+id/connect_wifi_button"
            android:layout_width="0dp"
            android:layout_height="56dp"
            style="@style/AppTheme.Buttons"
            android:text="@string/connect_wifi_button"
            android:layout_weight="1"
            android:visibility="gone" />

        <Button
            android:id="@+id/show_map_button"
            android:layout_width="0dp"
            android:layout_height="56dp"
            style="@style/AppTheme.Buttons"
            android:text="@string/show_map_button"
            android:layout_weight="1"
            android:visibility="gone" />

        <Button
            android:id="@+id/share_button"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginStart="8dp"
            style="@style/AppTheme.Buttons"
            android:text="@string/share_button"
            android:layout_weight="1"/>

    </LinearLayout>

</RelativeLayout>